--- a/client/crud/package.json
+++ b/client/crud/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/im-hary/crud.git",
+  "homepage":"https://github.com/im-hary/simple.git",
   "name": "crud",
   "private": true,
   "version": "0.0.0",
