--- a/client/crud/vercel.json
+++ b/client/crud/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites":[
-        {
-            "source":"/(.*)",
-            "destinatino":"/"
-        }
+    "redirects": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
     ]
-}
+  }
