--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 APPLICATION_URL=http://localhost:5173
-MONGODB_URL=mongodb://localhost:27017/crud
+MONGODB_URL=mongodb+srv://store:meowchan007@cluster0.1aahzyh.mongodb.net/Cluster0?retryWrites=true&w=majority&appName=Cluster0
