--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-APPLICATION_URL=http://localhost:5173
+APPLICATION_URL=https://crud-frontend-git-main-hariharans-projects-bdf4d7c4.vercel.app
 MONGODB_URL=mongodb+srv://store:meowchan007@cluster0.1aahzyh.mongodb.net/Cluster0?retryWrites=true&w=majority&appName=Cluster0
